<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".CarWash">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="303dp"
        android:layout_height="69dp"
        android:text="Car Wash"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display3"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/radioGroup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btnCarWashCalc"
        android:layout_width="325dp"
        android:layout_height="68dp"
        android:layout_marginTop="36dp"
        android:backgroundTint="#4A148C"
        android:text="@string/btnCarWashCalc"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTotalCarWashes"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/txtNumOfWashes"
        android:layout_width="271dp"
        android:layout_height="52dp"
        android:layout_marginTop="56dp"
        android:background="@color/white"
        android:ems="10"
        android:hint="@string/txtNumOfWashes"
        android:inputType="numberDecimal"
        android:textAlignment="center"
        android:textColor="#4A148C"
        android:textSize="21sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <TextView
        android:id="@+id/txtTotalCarWashes"
        android:layout_width="338dp"
        android:layout_height="94dp"
        android:layout_marginTop="16dp"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@color/white"
        android:textSize="27sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtNumOfWashes" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="332dp"
        android:layout_height="105dp"
        android:layout_marginBottom="320dp"
        android:background="@color/white"
        android:checkedButton="@id/radioBtnExterior"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.395"
        app:layout_constraintStart_toStartOf="parent">

        <RadioButton
            android:id="@+id/radioBtnExterior"
            android:layout_width="245dp"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/radioBtnExterior"
            android:textAlignment="viewStart"
            android:textAllCaps="true"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColorHighlight="@color/purple_200"
            android:textColorLink="@color/purple_200"
            android:textSize="15.5sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/radioBtnService"
            android:layout_width="299dp"
            android:layout_height="wrap_content"
            android:text="@string/radioBtnService"
            android:textAllCaps="true"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColorHighlight="#880E4F"
            android:textSize="15.5sp"
            android:textStyle="bold" />

    </RadioGroup>

    <TextView
        android:id="@+id/txtHowManyWashes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/txtHowManyWashes"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/txtNumOfWashes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>