<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:backgroundTint="#000000"
    tools:context=".CabFare">

    <TextView
        android:id="@+id/txtCabFare"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="Cab Fare"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display3"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnCabFareResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:backgroundTint="#880E4F"
        android:text="@string/btnCabFareResult"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtCabFareResult" />

    <TextView
        android:id="@+id/txtType"
        android:layout_width="364dp"
        android:layout_height="44dp"
        android:layout_marginTop="68dp"
        android:text="@string/txtType"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/white"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtLabel" />

    <TextView
        android:id="@+id/txtLabel"
        android:layout_width="371dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:text="@string/txtLabel"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        android:textColor="@color/white"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtCabFare" />

    <Spinner
        android:id="@+id/txtCab"
        android:layout_width="205dp"
        android:layout_height="53dp"
        android:layout_marginTop="8dp"
        android:background="@color/white"
        android:entries="@array/txtCab"
        android:spinnerMode="dialog"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtType" />

    <EditText
        android:id="@+id/txtDistance"
        android:layout_width="278dp"
        android:layout_height="49dp"
        android:layout_marginTop="12dp"
        android:background="@color/white"
        android:ems="10"
        android:hint="@string/txtDistance"
        android:inputType="numberDecimal"
        android:textAlignment="center"
        android:textColor="#880E4F"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtLabel" />

    <TextView
        android:id="@+id/txtCabFareResult"
        android:layout_width="316dp"
        android:layout_height="68dp"
        android:layout_marginTop="20dp"
        android:background="@color/black"
        android:hint="@string/txtDistance"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@color/white"
        android:textSize="27sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtCab" />

</androidx.constraintlayout.widget.ConstraintLayout>